2025-03-01T12:13:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13604636946 # 850
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-01
* notice: last 14d: unq all: 11 33
* notice: prev accum: outdated-unq outdated-all / unq all: 3952 8555 / 3979 8589
* notice: next accum: outdated-unq outdated-all / unq all: 3952 8555 / 3980 8590
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-15 2025-03-01]

2025-02-28T12:14:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13587910985 # 848
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-28
* notice: last 14d: unq all: 11 34
* notice: prev accum: outdated-unq outdated-all / unq all: 3952 8555 / 3978 8588
* notice: next accum: outdated-unq outdated-all / unq all: 3952 8555 / 3979 8589
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-28]

2025-02-28T00:39:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13578765383 # 847
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-28
* notice: last 14d: unq all: 11 33
* notice: prev accum: outdated-unq outdated-all / unq all: 3952 8555 / 3974 8583
* notice: next accum: outdated-unq outdated-all / unq all: 3952 8555 / 3978 8588
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [] / [2025-02-27]

2025-02-27T12:15:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13566130898 # 846