@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-01T12:13:27Z",
-  "count_outdated" : 8555,
-  "uniques_outdated" : 3952,
-  "count" : 8590,
-  "uniques" : 3980,
+  "timestamp" : "2025-03-02T00:42:54Z",
+  "count_outdated" : 8558,
+  "uniques_outdated" : 3954,
+  "count" : 8593,
+  "uniques" : 3983,
   "clones" : [
-    {
-      "timestamp": "2025-02-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-02-16T00:00:00Z",
       "count": 1,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2025-03-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 4,
+      "uniques_minmax": [ 1, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
