@@ -1,12 +1,7 @@
 {
-  "count": 33,
-  "uniques": 11,
+  "count": 35,
+  "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2025-02-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-16T00:00:00Z",
       "count": 1,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2025-03-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 4
     }
   ]
 }
